work on methods

--- a/main.bib
+++ b/main.bib
@@ -1607,3 +1607,14 @@ url={https://openreview.net/forum?id=HJGven05Y7},
  @article{Lecun_Bottou_Bengio_Haffner_1998, title={Gradient-based learning applied to document recognition}, volume={86}, ISSN={00189219}, DOI={10.1109/5.726791}, number={11}, journal={Proceedings of the IEEE}, author={Lecun, Y. and Bottou, L. and Bengio, Y. and Haffner, P.}, year={1998}, month={Nov}, pages={2278–2324} }
 
  @inproceedings{Deng_Dong_Socher_Li_KaiLi_LiFei_Fei_2009, address={Miami, FL}, title={ImageNet: A large-scale hierarchical image database}, ISBN={978-1-4244-3992-8}, url={https://ieeexplore.ieee.org/document/5206848/}, DOI={10.1109/CVPR.2009.5206848}, booktitle={2009 IEEE Conference on Computer Vision and Pattern Recognition}, publisher={IEEE}, author={Deng, Jia and Dong, Wei and Socher, Richard and Li, Li-Jia and Kai Li and Li Fei-Fei}, year={2009}, month={Jun}, pages={248–255} }
+
+@inproceedings{storck1995reinforcement,
+  title={Reinforcement driven information acquisition in non-deterministic environments},
+  author={Storck, Jan and Hochreiter, Sepp and Schmidhuber, J{\"u}rgen and others},
+  booktitle={Proceedings of the international conference on artificial neural networks, Paris},
+  volume={2},
+  pages={159--164},
+  year={1995}
+}
+
+ @inbook{Klapper-Rybicka_Schraudolph_Schmidhuber_2001, address={Berlin, Heidelberg}, series={Lecture Notes in Computer Science}, title={Unsupervised Learning in LSTM Recurrent Neural Networks}, volume={2130}, ISBN={978-3-540-42486-4}, url={http://link.springer.com/10.1007/3-540-44668-0_95}, DOI={10.1007/3-540-44668-0_95}, booktitle={Artificial Neural Networks — ICANN 2001}, publisher={Springer Berlin Heidelberg}, author={Klapper-Rybicka, Magdalena and Schraudolph, Nicol N. and Schmidhuber, Jürgen}, editor={Dorffner, Georg and Bischof, Horst and Hornik, Kurt}, year={2001}, pages={684–691}, collection={Lecture Notes in Computer Science} }
