work on methods

--- a/main.bib
+++ b/main.bib
@@ -1617,4 +1617,6 @@ url={https://openreview.net/forum?id=HJGven05Y7},
   year={1995}
 }
 
- @inbook{Klapper-Rybicka_Schraudolph_Schmidhuber_2001, address={Berlin, Heidelberg}, series={Lecture Notes in Computer Science}, title={Unsupervised Learning in LSTM Recurrent Neural Networks}, volume={2130}, ISBN={978-3-540-42486-4}, url={http://link.springer.com/10.1007/3-540-44668-0_95}, DOI={10.1007/3-540-44668-0_95}, booktitle={Artificial Neural Networks — ICANN 2001}, publisher={Springer Berlin Heidelberg}, author={Klapper-Rybicka, Magdalena and Schraudolph, Nicol N. and Schmidhuber, Jürgen}, editor={Dorffner, Georg and Bischof, Horst and Hornik, Kurt}, year={2001}, pages={684–691}, collection={Lecture Notes in Computer Science} }
+ @inbook{Klapper_Rybicka_Schraudolph_Schmidhuber_2001, address={Berlin, Heidelberg}, series={Lecture Notes in Computer Science}, title={Unsupervised Learning in LSTM Recurrent Neural Networks}, volume={2130}, ISBN={978-3-540-42486-4}, url={http://link.springer.com/10.1007/3-540-44668-0_95}, DOI={10.1007/3-540-44668-0_95}, booktitle={Artificial Neural Networks — ICANN 2001}, publisher={Springer Berlin Heidelberg}, author={Klapper-Rybicka, Magdalena and Schraudolph, Nicol N. and Schmidhuber, Jürgen}, editor={Dorffner, Georg and Bischof, Horst and Hornik, Kurt}, year={2001}, pages={684–691}, collection={Lecture Notes in Computer Science} }
+
+ @inproceedings{Balntas_Riba_Ponsa_Mikolajczyk_2016, address={York, UK}, title={Learning local feature descriptors with triplets and shallow convolutional neural networks}, ISBN={978-1-901725-59-9}, url={http://www.bmva.org/bmvc/2016/papers/paper119/index.html}, DOI={10.5244/C.30.119}, booktitle={Procedings of the British Machine Vision Conference 2016}, publisher={British Machine Vision Association}, author={Balntas, Vassileios and Riba, Edgar and Ponsa, Daniel and Mikolajczyk, Krystian}, year={2016}, pages={119.1-119.11}, language={en} }
