re-organize thesis structure

--- a/main.tex
+++ b/main.tex
@@ -156,12 +156,16 @@
 \input{tex/related_work}
 
 \setchapterpreamble[u]{\margintoc}
-\chapter{Methods}\chlbl{methods}
-\input{tex/methods}
+\chapter{Neuroscientific Concepts}\chlbl{neuro_concepts}
+\input{tex/neuro_concepts}
 
 \setchapterpreamble[u]{\margintoc}
-\chapter{Results}\chlbl{results}
-\input{tex/results}
+\chapter{Vertical Self-Organisation}\chlbl{vertical_self_org}
+\input{tex/vertical_self_org}
+
+\setchapterpreamble[u]{\margintoc}
+\chapter{Horizontal Self-Organisation}\chlbl{horizontal_self_org}
+\input{tex/horizontal_self_org}
 
 \setchapterpreamble[u]{\margintoc}
 \chapter{Future Work}\chlbl{future_work}
